logs updates for interceptor, minor change in user details, removed username claim and now only subject has the email